# VLLM

./: rust-toolchain.toml
crates/hypercube/src/logup_gkr/: proof.rs  prover.rs  verifier.rs
crates/hypercube/src/lookup/: interaction.rs
crates/hypercube/src/prover/: shard.rs  simple.rs
crates/hypercube/src/verifier/: machine.rs  shard.rs
crates/prover/src/: shapes.rs
crates/recursion/circuit/: Cargo.toml
crates/recursion/circuit/examples/: zkgpt_block_recursion.rs
crates/recursion/circuit/src/: logup_gkr.rs  shard.rs
crates/recursion/compiler/: Cargo.toml
crates/recursion/compiler/examples/: gpt2_12_blocks.rs  gpt2_block0.rs  gpt2_c_attn_dot_compare.rs  gpt2_layer_norm_compare.rs  zkgpt_attention_join.rs  zkgpt_c_proj_join.rs  zkgpt_c_proj_leaf.rs  zkgpt_leaf.rs  zkgpt_like.rs  zkgpt_ln2_leaf.rs  zkgpt_mlp_expansion_join.rs  zkgpt_mlp_expansion_leaf.rs  zkgpt_mlp_projection_join.rs  zkgpt_mlp_projection_leaf.rs
crates/recursion/compiler/src/circuit/: compiler.rs
crates/recursion/compiler/src/ir/: bf16.rs  instructions.rs  mod.rs
crates/recursion/data/bf16/: add  div  mul
crates/recursion/executor/: Cargo.toml
crates/recursion/executor/src/: analyzed.rs  bf16.rs  instruction.rs  lib.rs  program.rs  record.rs
crates/recursion/machine/: Cargo.toml
infer/: README.md  environment.yml  gpt2_bf16.py  gpt2_block0_export.py  gpt2_embedding_bf16.py  gpt2_layer_norm_reference.py  gpt2_zkgpt_bf16_export.py  test_zkgpt_block_recursion.py  test_zkgpt_full_inference.py  zkgpt_block_recursion.py  zkgpt_full_inference.py
(+20 files in other folders)
